Fix scrolling on mobile (Fixing #4)

--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -57,6 +57,7 @@
 	width: 100%;
 	display: flex;
 	align-items: center;
+	overflow-y: scroll;
 }
 
 .mobileContent {
